--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2021"
 publish = false
 
-
 [dependencies]
 anyhow = "1.0.86"
 axum = { version = "0.7.5", features = ["macros"] }
@@ -54,6 +53,9 @@ http = "1.1.0"
 jsonwebtoken = "9.3.0"
 strum = { version = "0.26.3", features = ["derive"] }
 indoc = "2.0.5"
+hex = "0.4.3"
+tower_governor = { version = "0.5.0", features = ["axum", "tracing"] }
+governor = "0.8.0"
 
 [dependencies.sea-orm]
 version = "1.0.0-rc.5"
