--- a/entity/Cargo.toml
+++ b/entity/Cargo.toml
@@ -11,4 +11,4 @@ path = "src/lib.rs"
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
-sea-orm = { version = "1.0.0-rc.5" }
+sea-orm = { version = "1.1", features = ["postgres-vector"]}
