--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -14,9 +14,23 @@ path = "src/bin/gen_key.rs"
 name = "decrypt"
 path = "src/bin/decrypt.rs"
 
+[[bin]]
+name = "tokenize"
+path = "src/bin/tokenize.rs"
+
+[[bin]]
+name = "cosine-similarity"
+path = "src/bin/cosine_similarity.rs"
+
 [dependencies]
 # -- App Crates
 lib-utils = { path = "../libs/lib-utils" }
 # -- Others
 dotenvy = "0.15.7"
 rand = "0.8"
+kitoken = "0.10"
+itertools = "0.13"
+reqwest = { version = "0.12", features = ["json"] }
+serde_json = "1.0"
+anyhow = "1.0"
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
