--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -60,7 +60,7 @@ ammonia = "4"
 once_cell = "1.21.3"
 
 [dependencies.sea-orm]
-version = "1.0.0-rc.5"
+version = "1.1"
 features = [
     "debug-print",
     "runtime-tokio-native-tls",
