--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace.lints.rust]
 
 [workspace]
-members = ["server", "entity", "prisma-cli", "libs/lib-utils", "tools", "libs/lib-email-clients", "tokenizer"]
+members = ["server", "entity", "prisma-cli", "libs/lib-utils", "tools", "libs/lib-email-clients", "libs/tokenizer"]
 resolver = "2"
 default-members = ["server"]
 
