--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   postgres:
     container_name: mail-assistant-postgres
-    image: postgres:14-alpine
+    image: pgvector/pgvector:pg14
     ports:
       - 5432:5432
     volumes:
