--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -57,8 +57,8 @@ hex = "0.4.3"
 tower_governor = { version = "0.5.0", features = ["axum", "tracing"] }
 governor = "0.8.0"
 uuid = { version = "1.11", features = ["v4"] }
-ammonia = "4"
 once_cell = "1.21.3"
+urlencoding = "2.1.3"
 
 [dependencies.sea-orm]
 version = "1.1"
