--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -59,6 +59,7 @@ governor = "0.8.0"
 uuid = { version = "1.11", features = ["v4"] }
 once_cell = "1.21.3"
 urlencoding = "2.1.3"
+ammonia = "4"
 
 [dependencies.sea-orm]
 version = "1.1"
