--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,7 +6,7 @@ publish = false
 
 [dependencies]
 anyhow = "1.0.86"
-axum = { version = "0.7.5", features = ["macros", "multipart"] }
+axum = { version = "0.7.5", features = ["macros", "multipart", "ws"] }
 config = "0.14.0"
 google-gmail1 = "6.0.0"
 lazy_static = "1.5.0"
