--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,7 +10,7 @@ axum = { version = "0.7.5", features = ["macros", "multipart", "ws"] }
 config = "0.14.0"
 google-gmail1 = "6.0.0"
 lazy_static = "1.5.0"
-reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12.7", features = ["json", "rustls-tls", "multipart"] }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 tokio = { version = "1.40.0", features = ["full"] }
@@ -52,6 +52,7 @@ axum-extra = { version = "0.9.4", features = ["typed-header", "cookie"] }
 http = "1.1.0"
 jsonwebtoken = "9.3.0"
 strum = { version = "0.26.3", features = ["derive"] }
+thiserror = "1.0"
 indoc = "2.0.5"
 hex = "0.4.3"
 tower_governor = { version = "0.5.0", features = ["axum", "tracing"] }
@@ -60,6 +61,7 @@ uuid = { version = "1.11", features = ["v4"] }
 once_cell = "1.21.3"
 urlencoding = "2.1.3"
 ammonia = "4"
+itertools = "0.14.0"
 
 [dependencies.sea-orm]
 version = "1.1"
